unpackaged/main/default/objects/Client_Insight__c/Client_Insight__c.object-meta.xml
<CustomObject>
    <label>Client Insight</label>
    <nameField>
        <displayFormat>CI-{0000000}</displayFormat>
        <label>Client Insight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>