unpackaged/main/default/objects/Client_Insight__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Insights</relationshipLabel>
    <relationshipName>Client_Insights</relationshipName>
    <type>Lookup</type>
</CustomField>