unpackaged/main/default/objects/Client_Insight__c/fields/Customisation__c.field-meta.xml
<CustomField>
    <fullName>Customisation__c</fullName>
    <label>Customisation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>