unpackaged/main/default/objects/Client_Insight__c/fields/FinishorColor__c.field-meta.xml
<CustomField>
    <fullName>FinishorColor__c</fullName>
    <label>Finish / Color</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Glossy</fullName>
            </value>
            <value>
                <fullName>Matte</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>