unpackaged/main/default/objects/Client_Insight__c/fields/FrequentTraveler__c.field-meta.xml
<CustomField>
    <fullName>FrequentTraveler__c</fullName>
    <label>Frequent Traveler</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>