unpackaged/main/default/objects/Client_Insight__c/fields/GenerationRange__c.field-meta.xml
<CustomField>
    <fullName>GenerationRange__c</fullName>
    <label>Generation Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baby Boomer</fullName>
            </value>
            <value>
                <fullName>Gen X</fullName>
            </value>
            <value>
                <fullName>Millennial</fullName>
            </value>
            <value>
                <fullName>Gen Z</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>