unpackaged/main/default/objects/Client_Insight__c/fields/LastReviewDate__c.field-meta.xml
<CustomField>
    <fullName>LastReviewDate__c</fullName>
    <label>Last Review Date</label>
    <type>Date</type>
</CustomField>