unpackaged/main/default/objects/Client_Insight__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aluminium</fullName>
            </value>
            <value>
                <fullName>Polycarbonate</fullName>
            </value>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>Nylon</fullName>
            </value>
            <value>
                <fullName>Leather</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>