unpackaged/main/default/objects/Client_Insight__c/fields/OtherLikedBrands__c.field-meta.xml
<CustomField>
    <fullName>OtherLikedBrands__c</fullName>
    <label>Other Liked Brands</label>
    <type>TextArea</type>
</CustomField>