unpackaged/main/default/objects/Client_Insight__c/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <label>Product Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Luggage</fullName>
            </value>
            <value>
                <fullName>Bags</fullName>
            </value>
            <value>
                <fullName>Specilties</fullName>
            </value>
            <value>
                <fullName>Travel Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>