unpackaged/main/default/objects/Client_Insight__c/fields/ReviewedInformation__c.field-meta.xml
<CustomField>
    <fullName>ReviewedInformation__c</fullName>
    <label>Reviewed Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>