unpackaged/main/default/objects/Client_Insight__c/fields/SelfPurchaseorGift__c.field-meta.xml
<CustomField>
    <fullName>SelfPurchaseorGift__c</fullName>
    <label>Self Purchase or Gift</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-purchase</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>