unpackaged/main/default/objects/Client_Insight__c/fields/TravelingPurpose__c.field-meta.xml
<CustomField>
    <fullName>TravelingPurpose__c</fullName>
    <label>Traveling Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Leisure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>