unpackaged/main/default/objects/Client_Insight__c/fields/UpcomingTravelPlans__c.field-meta.xml
<CustomField>
    <fullName>UpcomingTravelPlans__c</fullName>
    <label>Upcoming Travel Plans</label>
    <type>TextArea</type>
</CustomField>